--- a/index.html
+++ b/index.html
@@ -1,102 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device=width, intial-scale=1.0"/>
-    <title>Ikigai Founding Story</title>
-    <link rel="stylesheet" href="style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-  </head>
-    <title>Landing_Page</title></head>
-
-  <div style="bottom: 4px;background-color: #ffde59; text-center">
-
-
-
-
-
-  <div>
-  <div>
-<body>
-   <div class="container-fluid" style="background-color: #ffde59";>
-    <div class="row" style="background-color: #ffde59">
-        
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container px-10">
-                <a class="navbar-brand" href="index.html">Ikigai</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="pricing.html">Join Us</a></li>
-                        <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                <li><a class="dropdown-item" href="blog-home.html">Blog Home</a></li>
-                                <li><a class="dropdown-item" href="blog-post.html">Blog Post</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-
-        <h1 class="text-responsive text-center" style="font-family: Verdana, Geneva, Tahoma, sans-serif;"">IKIGAI</h1>
-        <p style="text-align: center; font- "><b>Create. Explore. Connect</b></p>
-      </div>
-
-        <div class="row">
-         <div class="col-md-3"><button class="btn btn-dark btn-block">Explore</button></div>
-         <div class="col-md-3"></div><button class="btn btn-dark btn-block">Our Services</button></div>
-         <div class="col-md-3"></div><button class="btn btn-dark btn-block">Join Us</button></nav></div>
-         <div class="col-md-3"><button class="btn btn-dark btn-block">Our Story</button></div>
-        </div>
-    </div>
-
-
-
-
-    <img src="https://i.pinimg.com/originals/cb/2a/aa/cb2aaa9277229b4afcf0bae581437342.jpg" class="img-responsive"><img>
-    <div class="card" style="background-color: #ffde59; border-color:black;">
-        <img class="card-img-top" src="holder.js/100x180/" alt="">
-        <div class="card-body">
-          <h4 class="card-title text-primary" style="black"></i>The Founding Story</h4>
-          <p class="card-text">How two girls did it</p>
-        </div>
-      </div>
-
-      <div class="row">
-    <div class="col-lg-8">
-    <p>In <b>2020 </b> the two founders of Ikigai embarked on a journey to empower the tenuous local arts industry in Singapore. United by the common 
-    passion over anything arts and culture,
-    <a href="https://www.linkedin.com/in/rory-dominique-ty-macalintal-977590200?miniProfileUrn=urn%3Ali%3Afs_miniProfile%3AACoAADNX2msBfZI9M0Vqr2ChEhq2ANUbPuTX6Sw&lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_all%3BOdCG%2BOyjRR6lmmEnQiXdzg%3D%3D"> 
-        Rory</a> and bestie <a href="https://www.linkedin.com/in/victoria-chak-min-xi-1575521bb/?lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_all%3BOdCG%2BOyjRR6lmmEnQiXdzg%3D%3D">
-            Victoria</a> Like O’Brien, Mr. Charrington must be re-assessed two-thirds of the way through the novel, when Winston and the reader learn that Mr. Charrington is a member of the Thought Police. In light of this revelation, all of Mr. Charrington’s interactions with Winston take on a different meaning. Contrary to what we’ve believed so far, Mr. Charrington was never a sympathetic appreciator of the past who identified with Winston’s rebellious spirit. Instead, he was acting as a manipulative agent of the Party laying traps to test how far Winston would go.Like O’Brien, Mr. Charrington must be re-assessed two-thirds of the way through the novel, when Winston and the reader learn that Mr. Charrington is a member of the Thought Police. In light of this revelation, all of Mr. Charrington’s interactions with Winston take on a different meaning. Contrary to what we’ve believed so far, Mr. Charrington was never a sympathetic appreciator of the past who identified with Winston’s rebellious spirit. Instead, he was acting as a manipulative agent of the Party laying traps to test how far Winston would go.Like O’Brien, Mr. Charrington must be re-assessed two-thirds of the way through the novel, when Winston and the reader learn that Mr. Charrington is a member of the Thought Police. In light of this revelation, all of Mr. Charrington’s interactions with Winston take on a different meaning. Contrary to what we’ve believed so far, Mr. Charrington was never a sympathetic appreciator of the past who identified with Winston’s rebellious spirit. Instead, he was acting as a manipulative agent of the Party laying traps to test how far Winston would go.
-        </p>
-        </div>
-        </div>
-
-        </div>
-        
-
-    <section>
-        <div>
-        <fieldset>
-            <label for ="Name">Name: <input id ="name" name="name" type="text" class="inline" required></label>
-        <label for ="email">Email Address: </Address><input id="email" name="email" type="email" class="inline"required></label>
-    <label for ="number">Phone Number<input id="number" name="number" type="number" required maxlength="10" class="inline" required </label>
-    <p>Be a part of the Ikigai family today.</p> <input type="submit">
-</fieldset>
-</div>
-</section>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-</body>
-</div>
-</div>
+<html>
+    <head>
+        <title>Example</title>
+    </head>
+    <body>
+        <header>
+           <img src="logo.png" alt="logo"/>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
+        <a href="about.html">About Us</a>
+    </nav>
+        </header>
+        <main>
+            <article>
+        <h1>JavaScript Basics</h1>
+        <p>JavaScript is a rich and expressive language...</p>
+        <section>
+            <h2>Syntax Basics</h2>
+            <p>Understanding statements, variable naming, whitespace...</p>
+        </section>
+        <section>
+            <h2>Operators</h2>
+            <p>Operators allow you to manipulate values...</p>
+        </section>
+        <section>
+            <h2>Conditional Code</h2>
+            <p>Sometimes you only want to run a block of code under certain conditions...</p>
+        </section>
+    </article>
+        </main>
+        <footer>
+            Footer information, links, etc.
+        </footer>
+    </body>
 </html>
